--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,10 +29,16 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
-# Build settings
-theme: minima
+# # Build settings
+# theme: minima
+# plugins:
+#   - jekyll-feed
+
+
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
