--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,15 +30,15 @@ url: "https://redwankarimsony.github.io" # Your GitHub Pages URL
 twitter_username: jekyllrb
 github_username:  jekyll
 
-# # Build settings
-# theme: minima
-# plugins:
-#   - jekyll-feed
-
-
-remote_theme: pages-themes/hacker@v0.2.0
+# Build settings
+theme: minima
 plugins:
-  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
+
+
+# remote_theme: pages-themes/hacker@v0.2.0
+# plugins:
+#   - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 
 # Exclude from processing.
